forma skoro gotova

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 type="password"
                 class="modal-input"
                 id="password-potvrda"
-                name="ime"
+                name="password-potvrda"
                 placeholder="Uneti sifru opet"
               />
               <p>Error Message</p>
