--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             </div>
             <input type="submit" value="Prijavite se" class="modal-input-btn">
             <p>Vec imate nalog? Ulogujte se<span class="modal-input-prijava"><a href"#"> ovde</a></span></p>
+            <p><span class="uspesna-prijava">Uspesna prijava!</span></p>
           </form>
         </div>
       </div>
