zamenila lorem ipsum

--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@
     <div class="main">
       <div class="main-container">
         <div class="main-content">
-          <h1>Lorem Ipsum</h1>
+          <h1>Praznična akcija!</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id
-            dictum nibh. Nunc sagittis congue rutrum. Cras felis tellus, posuere
-            id posuere in, pellentesque vitae ligula. Suspendisse tempus
-            vulputate quam. Mauris eu posuere nisl. Donec sit amet mattis elit.
+            U duhu praznika, Fired Up nudi 50% sniženja na svaku porudžbinu koja uključuje proizvod iz naše praznične kolekcije!
+            Akcija obuhvata samo prijavljene korisnike, tako da, ako već niste, postanije član Fired Up porodice danas i uživajte u praznicima uz nas!
           </p>
           <button class="main-btn">
-            Lorem Ipsum
+            Prijava
             <a href="#"></a>
           </button>
         </div>
@@ -72,7 +70,7 @@
         <div class="modal-content-desno">
           <form action="/" method="GET" class="modal-form" id="form">
             <h1>
-              Nulla at dolor rhoncus, hendrerit lorem sed, imperdiet arcu.
+              Prijavite se da postanete član Fired Up porodice danas i da ostvarite pravo na mnogobrojne pogodnosti!
             </h1>
             <div class="form-validacija">
               <input
@@ -90,7 +88,7 @@
                 class="modal-input"
                 id="email"
                 name="email"
-                placeholder="Uneti email"
+                placeholder="Uneti e-mail"
               />
               <p>Error Message</p>
             </div>
@@ -100,7 +98,7 @@
                 class="modal-input"
                 id="password"
                 name="password"
-                placeholder="Uneti sifru"
+                placeholder="Uneti šifru"
               />
               <p>Error Message</p>
             </div>
@@ -110,13 +108,13 @@
                 class="modal-input"
                 id="password-potvrda"
                 name="password-potvrda"
-                placeholder="Uneti sifru opet"
+                placeholder="Uneti šifru ponovo"
               />
               <p>Error Message</p>
             </div>
             <input type="submit" value="Prijavite se" class="modal-input-btn">
-            <p>Vec imate nalog? Ulogujte se<span class="modal-input-prijava"><a href"#"> ovde</a></span></p>
-            <p><span class="uspesna-prijava">Uspesna prijava!</span></p>
+            <p>Već imate nalog? Ulogujte se<span class="modal-input-prijava"><a href"#"> ovde</a></span></p>
+            <p><span class="uspesna-prijava">Uspešna prijava!</span></p>
           </form>
         </div>
       </div>
