--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>
             U duhu praznika, Fired Up nudi 50% sniženja na svaku porudžbinu koja uključuje proizvod iz naše praznične kolekcije!
             <br/>
-            Akcija obuhvata samo prijavljene korisnike, tako da, ako već niste, postanije član Fired Up porodice danas i uživajte u praznicima uz nas!
+            Akcija obuhvata samo prijavljene korisnike, tako da, ako već niste, postanite član Fired Up porodice danas i uživajte u praznicima uz nas!
           </p>
           <button class="main-btn">
             Prijava
