galerija (nije responsive, nema pozadinu)

--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
         </div>
       </div>
     </div>
+    <section id="index-gallery" class="wrapper-gallery background">
+      <h1>Naši proizvodi</h1>
+      <div class="gallery-img img1">
+        <div><a href="#">Vanilla <br/> Nežne note vanile</a></div>
+      </div>
+      <div class="gallery-img img2">
+        <div><a href="#">Cinnamon <br/> Sladak miris cimeta</a></div>
+      </div>
+      <div class="gallery-img img3">
+        <div><a href="#">Gingerbread <br/> Ukusan miris kolača od đumbira</a></div>
+      </div>
+      <div class="gallery-img img4">
+        <div><a href="#">Dark Orchid <br/> Opojna nota tamne orhideje</a></div>
+      </div>
+      <div class="gallery-img img5">
+        <div><a href="#">Wild berry <br/> Voćkasta aroma bobica</a></div>
+      </div>
+      <div class="gallery-img img6">
+        <div><a href="#">Coconut <br/> Tropski miris kokosa</a></div>
+      </div>
+      <div class="gallery-img img7">
+        <div><a href="#">Chocolate <br/> Neodoljiva nota čokolade</a></div>
+      </div>
+    </section>
     <script src="assets\js\main.js"></script>
   </body>
 </html>
