sredila galeriju (valjda)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </div>
     <section id="index-gallery" class="wrapper-gallery background">
-      <h1>Naši proizvodi</h1>
+      <h1>Naši proizvodi:</h1>
       <div class="gallery-img img1">
         <div><a href="#">Vanilla <br/> Nežne note vanile</a></div>
       </div>
