petljala se sa pocetnom

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" href="assets/images/icon.ico"/>
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap"
       rel="stylesheet"
@@ -39,6 +40,15 @@
         </ul>
       </nav>
     </div>
+    <div class="container">
+      <div class="jumbotron mt-3">
+          <div class="transbox px-3 py-2 text-center">
+            <p class="lead1">Dobrodošli u</p>
+            <h1 class="display-4">Fired Up</h1>
+            <p class="lead2">Prodavnicu mirisnih sveća po svačijem ukusu!</p>
+        </div>
+      </div>
+     </div>
     <div class="main">
       <div class="main-container">
         <div class="main-content">
