privremeni izgled pocetne
treba da dodam bolju sliku (viseg kvaliteta)

--- a/index.html
+++ b/index.html
@@ -40,15 +40,20 @@
         </ul>
       </nav>
     </div>
-    <div class="container">
-      <div class="jumbotron mt-3">
-          <div class="transbox px-3 py-2 text-center">
-            <p class="lead1">Dobrodošli u</p>
-            <h1 class="display-4">Fired Up</h1>
-            <p class="lead2">Prodavnicu mirisnih sveća po svačijem ukusu!</p>
+    <div class="intro-header">
+      <div class="intro-content">
+        <div class="intro-text">
+          <div class="heading-jumbo">
+            Fired Up - mirisne sveće
+            <br/>
+          </div>
+            <div class="header-donji-txt">
+              100% prirodne, 100% ručno pravljene!
+              <br/>
+            </div>
         </div>
       </div>
-     </div>
+    </div>
     <div class="main">
       <div class="main-container">
         <div class="main-content">
