--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
         <ul class="nav-meni">
           <li><a href="index.html" class="nav-linkovi">Home</a></li>
-          <li><a href="#" class="nav-linkovi">Proizvodi</a></li>
-          <li><a href="#" class="nav-linkovi">O nama</a></li>
-          <li><a href="#" class="nav-linkovi">O Autoru</a></li>
+          <li><a href="#proizvodi" class="nav-linkovi">Proizvodi</a></li>
+          <li><a href="#o-nama" class="nav-linkovi">O Nama</a></li>
+          <li><a href="https://portfolioana.github.io/" target="_blank" class="nav-linkovi">O Autoru</a></li>
           <li>
-            <a href="#" class="nav-linkovi nav-linkovi-btn">Dostava</a>
+            <a href="#" class="nav-linkovi nav-linkovi-btn" onclick="showAlert()">Dostava</a>
           </li>
         </ul>
       </nav>
@@ -56,7 +56,7 @@
         </div>
       </div>
     </section>
-    
+    <a name="proizvodi"></a>
     <section id="index-gallery" class="wrapper-gallery background">
       <h1>Naši proizvodi:</h1>
       <div class="gallery-img img1">
@@ -169,6 +169,25 @@
         </div>
       </div>
     </div>
+    <a name="o-nama"></a>
+    <section class="about-us prvi-deo">
+      <div class="desna-strana">
+        <img src="assets/images/bela-sveca.jpg" alt="bela sveca" class="about-us-img">
+      </div>
+      <div class="leva-strana">
+        <h2 class="about-us-naslov">Fired Up - Skroman pocetak</h2>
+        <p class="about-us-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </section>
+    <section class="about-us drugi-deo">
+      <div class="desna-strana">
+        <h2 class="about-us-naslov">Fired Up - Sada</h2>
+        <p class="about-us-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+      <div class="leva-strana">
+        <img src="assets/images/paket.jpg" alt="praznicni paket" class="about-us-img">
+      </div>
+    </section>
     <section class="footer">
       <div class="social">
         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -176,18 +195,25 @@
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
       </div>
+      <div class="contact">
+        <i class="fas fa-phone-square"></i>+381 641234567
+        <br/>
+        <i class="fas fa-home"></i>Street Name 123, Beograd
+        <br/>
+        <i class="fas fa-at"></i>firedupcandles&#64;gmail.com
+      </div>
       <ul class="list">
         <li>
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="#">Proizvodi</a>
+          <a href="#proizvodi">Proizvodi</a>
         </li>
         <li>
-          <a href="#">O nama</a>
+          <a href="#o-nama">O Nama</a>
         </li>
         <li>
-          <a href="#">O autoru</a>
+          <a href="https://portfolioana.github.io/" target="_blank">O Autoru</a>
         </li>
         <li>
           <a href="#">Dokumentacija</a>
