--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@
     <a name="o-nama"></a>
     <section class="about-us prvi-deo">
       <div class="desna-strana">
-        <img src="assets/images/bela-sveca.jpg" alt="bela sveca" class="about-us-img">
+        <img src="assets/images/bela-sveca.jpg" alt="bela sveća" class="about-us-img">
       </div>
       <div class="leva-strana">
-        <h2 class="about-us-naslov">Fired Up - Skroman pocetak</h2>
-        <p class="about-us-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <h2 class="about-us-naslov">Fired Up - Skroman početak</h2>
+        <p class="about-us-txt">Fired Up počinje kao želja jedne devojke da pokloni prijatelju jedinstveni praznični poklon. Posle danonoćnog istraživanja, mukotrpnog rada i pregršt grešaka i odbačenih pokušaja, nastala je prva Fired Up sveća. Nakon toga, sve više ljudi je pokazalo zanimanje za ovaj mali projekat i ostalo je istorija...</p>
       </div>
     </section>
     <section class="about-us drugi-deo">
       <div class="desna-strana">
         <h2 class="about-us-naslov">Fired Up - Sada</h2>
-        <p class="about-us-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="about-us-txt">Danas Fired Up proizvodi desetine proizvoda svake nedelje i radimo na tome da se proširimo. Svaki proizvod je ručne izrade, sa prirodnim sastojcima, pravljen sa istom količinom ljubavi kao i prvi put. Naše sveće dolaze u 7 različitih mirisa, ali ono što im je zajednočko je da svaka pruža zagarantovanih 28+ sati toplote.</p>
       </div>
       <div class="leva-strana">
-        <img src="assets/images/paket.jpg" alt="praznicni paket" class="about-us-img">
+        <img src="assets/images/paket.jpg" alt="praznični paket" class="about-us-img">
       </div>
     </section>
     <section class="footer">
