--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </li>
       </ul>
       <p class="copyright">
-        Ana Ivanovic ICT @ 2021
+        Copyright &copy; Ana Ivanović ICT 2021
       </p>
     </section>
     <script src="assets\js\main.js"></script>
