--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Fired Up</title>
+    <meta name="keywords" content="sveće, dekoracija, poklon, praznici, svećice, mirišljave, vanila, kokos, čokolada, orhideja, đumbir, cimet, voće" />
+        <meta name="description" content="Prodavnica mirišljavih sveća Fired Up" />
   </head>
   <body>
     <header class="nav-container">
@@ -190,10 +192,10 @@
     </section>
     <section class="footer">
       <div class="social">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-snapchat"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.snapchat.com/" target="_blank"><i class="fab fa-snapchat"></i></a>
+        <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
       </div>
       <div class="contact">
         <i class="fas fa-phone-square"></i>+381 641234567
@@ -216,7 +218,7 @@
           <a href="https://portfolioana.github.io/" target="_blank">O Autoru</a>
         </li>
         <li>
-          <a href="#">Dokumentacija</a>
+          <a href="assets/Dokumentacija.pdf">Dokumentacija</a> <!---Dokumentacija je trenutno u izradi, biće dodata naknadno-->
         </li>
       </ul>
       <p class="copyright">
