par poslednjih promena i nova dokumentacija

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,7 +26,7 @@
   <body>
     <header class="nav-container">
       <nav class="navbar">
-        <a href="index.html" id="logo"><h1 id="navbar-logo">Fired Up</h1></a>
+        <a href="index.html" id="logo"><h2 id="navbar-logo">Fired Up</h2></a>
         <div class="meni-toggle" id="mobilni-meni">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -60,7 +60,7 @@
     </section>
     <a name="proizvodi"></a>
     <section id="index-gallery" class="wrapper-gallery background">
-      <h1>Naši proizvodi:</h1>
+      <h2>Naši proizvodi:</h2>
       <div class="gallery-img img1">
         <div><a href="#">Vanilla <br/> Nežne note vanile</a></div>
       </div>
@@ -93,7 +93,7 @@
     <div class="main">
       <div class="main-container">
         <div class="main-content">
-          <h1>Praznična akcija!</h1>
+          <h2>Praznična akcija!</h2>
           <p>
             U duhu praznika, Fired Up nudi 50% sniženja na svaku porudžbinu koja uključuje proizvod iz naše praznične kolekcije!
             <br/>
@@ -121,9 +121,9 @@
         </div>
         <div class="modal-content-desno">
           <form action="/" method="GET" class="modal-form" id="form">
-            <h1>
+            <h2>
               Prijavite se da postanete član Fired Up porodice danas i da ostvarite pravo na mnogobrojne pogodnosti!
-            </h1>
+            </h2>
             <div class="form-validacija">
               <input
                 type="text"
@@ -218,7 +218,7 @@
           <a href="https://portfolioana.github.io/" target="_blank">O Autoru</a>
         </li>
         <li>
-          <a href="assets/Dokumentacija.pdf">Dokumentacija</a> <!---Dokumentacija je trenutno u izradi, biće dodata naknadno-->
+          <a href="assets/Dokumentacija.pdf">Dokumentacija</a> 
         </li>
       </ul>
       <p class="copyright">
