dodala nesto formi i promenila dokumentaciju da bude tekst

--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
               />
               <p>Error Message</p>
             </div>
+            <div class="form-validacija">
+              <input 
+              type="checkbox"
+              name="obavestenja" id="obavestenja" />
+              <label for="obavestenja">Želim da primam obaveštenja o novim proizvodima i popustima na email</label>
+            </div>
             <input type="submit" value="Prijavite se" class="modal-input-btn">
             <p>Već imate nalog? Ulogujte se<span class="modal-input-prijava"><a href"#"> ovde</a></span></p>
             <p><span class="uspesna-prijava">Uspešna prijava!</span></p>
